--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,9 @@
     "test": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@google-cloud/firestore": "^4.15.1",
+    "firebase-admin": "^9.11.1"
+  }
 }
