--- a/quick_run/pubspec.yaml
+++ b/quick_run/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_maps_flutter: ^2.0.10
   google_maps_flutter_web: ^0.3.1
   http: ^0.13.3
+  webview_flutter:
 
 dev_dependencies:
   flutter_test:
