select page finished

--- a/quick_run/pubspec.yaml
+++ b/quick_run/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   assets:
     - assets/1.png
     - assets/3.png
+    - assets/4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
