--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^4.15.1",
+    "@googlemaps/google-maps-services-js": "^3.1.16",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.1",
+    "hbs": "^4.1.2",
     "underscore": "^1.13.1"
   }
 }
