--- a/quick_run/pubspec.yaml
+++ b/quick_run/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
-  google_maps_flutter: ^2.0.10
-  google_maps_flutter_web: ^0.3.1
+  #google_maps_flutter: ^2.0.10
+  #google_maps_flutter_web: ^0.3.1
   http: ^0.13.3
   webview_flutter:
 
