--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/firestore": "^4.15.1",
     "@googlemaps/google-maps-services-js": "^3.1.16",
     "express": "^4.17.1",
+    "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
     "hbs": "^4.1.2",
     "underscore": "^1.13.1"
