--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.15.1",
     "@googlemaps/google-maps-services-js": "^3.1.16",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
