--- a/quick_run/pubspec.yaml
+++ b/quick_run/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   #google_maps_flutter_web: ^0.3.1
   http: ^0.13.3
   webview_flutter:
+  geolocator: ^7.6.2
 
 dev_dependencies:
   flutter_test:
