navigation to maps page

--- a/quick_run/pubspec.yaml
+++ b/quick_run/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.3
   webview_flutter:
   geolocator: ^7.6.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
